--- a/.github/workflows/metal.yml
+++ b/.github/workflows/metal.yml
@@ -1,4 +1,4 @@
-name: 'packet'
+name: 'metal'
 
 on:
   push:
@@ -12,18 +12,18 @@ jobs:
     # TODO(displague) PACKET_AUTH_TOKEN should be defined once, globally
     # TODO(displague) PROJECT_ID should also be globalized
     steps:
-    - id: packet-project
-      uses: displague/packet-project-action@v0.1.0
+    - id: metal-project
+      uses: displague/metal-project-action@v0.4.0
       env:
         PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
     - name: Use the Project ID (display it)
       run: |
-        echo Packet Project "$PROJECT_NAME" has ID "$PROJECT_ID"
+        echo Equinix Metal Project "$PROJECT_NAME" has ID "$PROJECT_ID"
       env:
-        PROJECT_ID: ${{ steps.packet-project.outputs.projectID }}
-        PROJECT_NAME: ${{ steps.packet-project.outputs.projectName }}
+        PROJECT_ID: ${{ steps.metal-project.outputs.projectID }}
+        PROJECT_NAME: ${{ steps.metal-project.outputs.projectName }}
     - name: Project Delete
-      uses: displague/packet-sweeper-action@v0.1.0
+      uses: displague/metal-sweeper-action@v0.2.0
       env:
-        PROJECT_ID: ${{ steps.packet-project.outputs.projectID }}
+        PROJECT_ID: ${{ steps.metal-project.outputs.projectID }}
         PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
