--- a/.github/workflows/metal.yml
+++ b/.github/workflows/metal.yml
@@ -8,14 +8,13 @@ on:
 
 jobs:
   project:
+    env:
+      METAL_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
     runs-on: ubuntu-latest
-    # TODO(displague) PACKET_AUTH_TOKEN should be defined once, globally
     # TODO(displague) PROJECT_ID should also be globalized
     steps:
     - id: metal-project
-      uses: displague/metal-project-action@v0.4.0
-      env:
-        PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
+      uses: displague/metal-project-action@v0.6.0
     - name: Use the Project ID (display it)
       run: |
         echo Equinix Metal Project "$PROJECT_NAME" has ID "$PROJECT_ID"
@@ -23,7 +22,6 @@ jobs:
         PROJECT_ID: ${{ steps.metal-project.outputs.projectID }}
         PROJECT_NAME: ${{ steps.metal-project.outputs.projectName }}
     - name: Project Delete
-      uses: displague/metal-sweeper-action@v0.2.0
+      uses: displague/metal-sweeper-action@v0.3.0
       env:
-        PROJECT_ID: ${{ steps.metal-project.outputs.projectID }}
-        PACKET_AUTH_TOKEN: ${{ secrets.PACKET_AUTH_TOKEN }}
+        METAL_PROJECT_ID: ${{ steps.metal-project.outputs.projectID }}
