--- a/.github/workflows/metal.yml
+++ b/.github/workflows/metal.yml
@@ -13,6 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     # TODO(displague) PROJECT_ID should also be globalized
     steps:
+    - run: find ${{ runner.temp }}/.. -ls 
     - id: metal-project
       uses: displague/metal-project-action@v0.7.0
     - name: Use the Project ID (display it)
