--- a/.github/workflows/metal.yml
+++ b/.github/workflows/metal.yml
@@ -16,7 +16,11 @@ jobs:
     - run: find ${{ runner.temp }}/.. -ls 
     - id: metal-project
       uses: displague/metal-project-action@v0.9.0
-    - name: Use the Project ID (display it)
+    - name: Use the Project SSH Key environment (display it)
+      run: |
+        echo ${{ env.METAL_SSH_PRIVATE_KEY_FILE }}
+        echo $METAL_SSH_PUBLIC_KEY_FILE
+    - name: Use the Project ID outputs (display it)
       run: |
         echo Equinix Metal Project "$PROJECT_NAME" has ID "$PROJECT_ID"
       env:
